k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titansops-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titansops
      component: web
  template:
    metadata:
      labels:
        app: titansops
        component: web
    spec:
      containers:
      - name: web
        image: wackopsprodacr.azurecr.io/tops-web:0.0.1
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "1000m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /up
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 60
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: public
          mountPath: /app/public
      volumes:
      - name: public
        emptyDir: {}
