k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titansops-redis
spec:
  selector:
    app: titansops
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
