k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titansops-web
spec:
  selector:
    app: titansops
    component: web
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
